# streamlit-llama-stack

./: .cursorrules  .envrc.skeleton  .gitignore  Makefile  README.md  app.py  llama_stack_service.py  pyproject.toml
scripts/: quality-check.sh
streamlit_llamastack/: app.py  cli.py  service.py
