[tool.poetry]
name = "streamlit-ollama-chat"
version = "0.1.0"
description = "A simple Streamlit chat interface for Ollama"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = "^1.28.0"
requests = "^2.31.0"
llama-stack-client = "^0.2.13"
fire = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.poetry.scripts]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 