[tool.poetry]
name = "streamlit-llamastack"
version = "0.1.0"
description = "A modern Streamlit chat interface for Llama Stack"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "streamlit_llamastack"}]

[tool.poetry.scripts]
streamlit-llamastack = "streamlit_llamastack.cli:main"

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = "^1.28.0"
requests = "^2.31.0"
llama-stack-client = "^0.2.13"
fire = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 