[project]
name = "streamlit-llamastack"
version = "0.1.0"
description = "A modern Streamlit chat interface for Llama Stack"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "llama-stack-client>=0.2.13",
    "fire>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[project.scripts]
streamlit-llamastack = "streamlit_llamastack.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["streamlit_llamastack*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta" 